Only stop the download when the network flag is set, not any time we get a stop message on the listener. (bug 154277)